# SlicerML

./: CMakeLists.txt  README.md
Covictory/: CMakeLists.txt  Covictory.py
Covictory/Resources/UI/: Covictory.ui
Experiments/: cvae.py
